# Intelligent-file-deduplcator

./: Cargo.toml  README.md  report.json
src/: advance_filtering.rs  hash_algo.rs  main.rs  parallel_hashing.rs  quarantine_and_report.rs  testing_file.rs
src/parallel_hashing/: hash_algo.rs
test_folder/: data_file1.txt
