[package]
name = "minor_project_1"
version = "0.1.0"
edition = "2024"

[[test]]
name = "hash_algo"
path = "src/testing_file.rs"

[dependencies]
rand = "0.9.1"
colored = "2.1.0"
sha2 = "0.11.0-rc.0"
blake3 = "1.5"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
walkdir = "2.5"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"